New swagger.json complete - slice_des --> base_slice_des
